@@ -1,5 +1,6 @@
 Version 1.24.0 *
 ==================
+- Added Show the LST line number in debug mode when the execution is paused. The information is visible at the very button of the debugger.
 - Changed the start directory of the file open dialog to the base directory of the current project.
 - Improved search and replace file pattern, i.e. the default pattern has been changed from `*` to `*.gms`. The change is applied to all the cases where a file pattern can be configured.
 
